--- a/client/src/app/modules/shared/components/recipe-form/recipe-form.component.scss
+++ b/client/src/app/modules/shared/components/recipe-form/recipe-form.component.scss
@@ -112,7 +112,7 @@ form {
     border: 1px solid lighten(gray, 30%);
   }
   .warn-wrapper {
-    @include box-size($width: 100%, $height: 1rem);
+    @include box-size($width: 100%, $min-height: 1rem);
     padding: 0.2rem 0;
     .warn {
       @include fonts($color: crimson, $size: 0.9rem);
@@ -132,9 +132,9 @@ form {
         }
       }
     }
-    .small {
+    /* .small {
       @include box-size($height: 70px);
-    }
+    } */
   }
   .ingredients .add,
   .steps .add {
