recipe create fixed, add & remove

--- a/client/src/app/modules/recipe-details/recipe/recipe.component.html
+++ b/client/src/app/modules/recipe-details/recipe/recipe.component.html
@@ -91,7 +91,7 @@
                 loading="lazy"
               />
             </ng-container>
-            <ng-container *ngIf="recipe.author.user_image.url">
+            <ng-container *ngIf="recipe.author.user_image">
               <img
                 [src]="recipe.author.user_image.url"
                 alt="user image"
