--- a/client/src/app/modules/admin/admin-home/admin-home.component.html
+++ b/client/src/app/modules/admin/admin-home/admin-home.component.html
@@ -1,3 +1,10 @@
-<p>admin-home works!</p>
-<app-navigation></app-navigation>
-<router-outlet></router-outlet>
+<div
+  [ngClass]="
+    uiService.editState
+      ? 'admin-container container disable-scrolling'
+      : 'admin-container container'
+  "
+>
+  <app-navigation></app-navigation>
+  <router-outlet></router-outlet>
+</div>
