--- a/client/src/app/modules/shared/components/private-recipe/private-recipe.component.html
+++ b/client/src/app/modules/shared/components/private-recipe/private-recipe.component.html
@@ -34,6 +34,7 @@
       *ngIf="isUsersRecipes"
       class="tooltip-container"
       aria-label="edit recipe"
+      (click)="editRecipe(recipe._id)"
     >
       <!-- @click="$emit('editing', recipe._id)" -->
 
