--- a/client/src/styles/styles.scss
+++ b/client/src/styles/styles.scss
@@ -162,7 +162,7 @@ small {
 }
 
 // modal box & overlay
-.modalOverlay {
+.modal-overlay {
   position: fixed;
   top: 0;
   left: 0;
@@ -171,7 +171,7 @@ small {
   z-index: 8;
 }
 
-.modalWrapper {
+.modal-wrapper {
   position: fixed;
   top: 0;
   left: 0;
@@ -196,13 +196,13 @@ small {
     }
   }
 
-  .editInner {
+  .edit-inner {
     @include box-size($height: calc(100% - 60px));
     overflow: auto;
   }
 }
 
-.disableScrolling {
+.disable-scrolling {
   overflow: hidden;
   position: absolute;
   @include box-size($height: 100vh);
@@ -226,6 +226,27 @@ small {
 }
 
 // sorting
-.sortingItem {
+.sorting-item {
   transition: all 1s;
+}
+
+@media (min-width: 768px) {
+  .modal-wrapper {
+    @include box-size($height: 600px, $width: 750px);
+    flex-direction: column;
+    justify-content: flex-start;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 9;
+
+    header {
+      .header-inner {
+        h2 {
+          margin-top: 1rem;
+        }
+      }
+    }
+  }
 }
