--- a/client/src/app/app.component.scss
+++ b/client/src/app/app.component.scss
@@ -5,14 +5,14 @@
 	display: grid;
 	grid-template-rows: 50px 1fr;
 	grid-template-areas:
-	"header"
+	"head"
 	"content";
 	min-height: 100vh;
 	width: 100%;
 }
 
 .content-wrapper {
-	grid-area: "content";
+	grid-area: content;
 }
 
 
