--- a/client/src/styles/abstracts/_variables.scss
+++ b/client/src/styles/abstracts/_variables.scss
@@ -5,6 +5,7 @@ $graphite: #333;
 $golden: #a3865b;
 $lightgray: lightgray;
 $star-color: rgba(236, 214, 13, 0.973);
+$midTone: #7a7465fb;
 
 // gradients
 $greenGradient: linear-gradient(to top, #097e4b 0%, #189751 100%);
