--- a/client/src/app/modules/admin/admin-home/admin-home.component.html
+++ b/client/src/app/modules/admin/admin-home/admin-home.component.html
@@ -6,5 +6,7 @@
   "
 >
   <app-navigation></app-navigation>
-  <router-outlet></router-outlet>
+  <div class="flex flex-center outlet-wrapper">
+    <router-outlet></router-outlet>
+  </div>
 </div>
