--- a/client/src/app/modules/admin/admin-home/admin-home.component.scss
+++ b/client/src/app/modules/admin/admin-home/admin-home.component.scss
@@ -13,8 +13,14 @@
 .disable-scrolling {
   overflow: hidden;
 }
+
 @media (min-width: 768px) {
   .admin-container {
-    padding: 2rem 1rem 1rem 0;
+    padding: 2rem 1rem 1rem 3rem;
   }
+
+  /* .outlet-wrapper {
+    margin: 0 1rem;
+    align-self: flex-end;
+  } */
 }
