--- a/client/src/app/modules/admin/navigation/navigation.component.scss
+++ b/client/src/app/modules/admin/navigation/navigation.component.scss
@@ -9,6 +9,7 @@
 nav {
   @include box-size($width: 100%);
   position: fixed;
+  top: 50px;
   background-color: rgba(15, 15, 15, 0.932);
   box-shadow: $shadowSmall;
   transition: 0.5s ease-in-out;
