--- a/client/src/app/modules/admin/statistic-box/statistic-box.component.html
+++ b/client/src/app/modules/admin/statistic-box/statistic-box.component.html
@@ -1,4 +1,8 @@
-<div class="statistic-box-wrapper">
+<div
+  [ngClass]="
+    autoHeight ? 'height-auto statistic-box-wrapper' : 'statistic-box-wrapper'
+  "
+>
   <h3>{{ title }}</h3>
   <div class="bars-wrapper">
     <app-statistic-bars
